# evm-parachain

./: Cargo.toml  README.md
.github/: ci.yaml
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  eth.rs  service.rs
node/src/rpc/: eth.rs  mod.rs
runtime/: Cargo.toml
runtime/src/: apis.rs  benchmarks.rs  lib.bkp.2  lib.rs  xcm_config.rs
runtime/src/configs/: mod.rs  xcm.rs
